tests/errors.stderr
warning: unused import: `Span`
 --> src/enum_map.rs
  |
  | use proc_macro2::{Ident, Span};
  |                          ^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: associated function is never used: `set_twice`
  --> src/helpers.rs
   |
   |     pub(crate) fn set_twice(arg: &'static str) -> Self {
   |                   ^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: associated function is never used: `not_set`
  --> src/helpers.rs
   |
   |     pub(crate) fn not_set(arg: &'static str) -> Self {
   |                   ^^^^^^^

error: argument `value` is not set
  --> tests/errors.rs:37:14
   |
37 |     #[mapstr()]
   |              ^

error: argument `name` must be specified on first variant
  --> tests/errors.rs:43:7
   |
43 |     #[mapstr("fa")]
   |       ^^^^^^

error: argument `value` is not set
  --> tests/errors.rs:49:14
   |
49 |     #[mapstr(name="fas")]
   |              ^^^^

error: argument `value` is set twice
  --> tests/errors.rs:55:30
   |
55 |     #[mapstr("fa", name="n", "faas")]
   |                              ^^^^^^

error: expected one of: `name`, `default_to`, `default_from`, `no_to`, `no_from`, `default`, `r#try`, string literal
  --> tests/errors.rs:62:30
   |
62 |     #[mapstr("fa", name="n", fas)]
   |                              ^^^

error: expected one of: `name`, `default_to`, `default_from`, `no_to`, `no_from`, `default`, `r#try`, string literal
  --> tests/errors.rs:68:31
   |
68 |     #[mapstr("fa", name="n",  nasdf="faas")]
   |                               ^^^^^

error: expected string literal
  --> tests/errors.rs:74:35
   |
74 |     #[mapstr("fa", name="n", name=true)]
   |                                   ^^^^

error: expected identifier
  --> tests/errors.rs:86:44
   |
86 |     #[mapstr("fa", name="n",  default_from="fa")]
   |                                            ^^^^

error: expected `enum`
  --> tests/errors.rs:91:1
   |
91 | struct Sa {}
   | ^^^^^^

error: cannot find attribute `mapstr2` in this scope
  --> tests/errors.rs:80:7
   |
80 |     #[mapstr2("fa", name="n",  name=true)]
   |       ^^^^^^^ help: a derive helper attribute with a similar name exists: `mapstr`

error[E0599]: no method named `try_to_caps` found for enum `Example` in the current scope
  --> tests/errors.rs:31:17
   |
5  | enum Example {
   | ------------ method `try_to_caps` not found for this
...
31 |     Example::V1.try_to_caps();
   |                 ^^^^^^^^^^^ help: there is an associated function with a similar name: `try_to_caps2`

error[E0599]: no method named `try_from_caps2` found for enum `Example` in the current scope
  --> tests/errors.rs:32:17
   |
5  | enum Example {
   | ------------ method `try_from_caps2` not found for this
...
32 |     Example::V2.try_from_caps2();
   |                 ^^^^^^^^^^^^^^ help: there is an associated function with a similar name: `try_to_caps2`
